Added info to HTML
Added H1, Columns and Source Code link

--- a/index.html
+++ b/index.html
@@ -13,10 +13,36 @@
 <body>
     <div class="container">
     <h1>
-        Vanilla Project
+        New York
     </h1>
-    <a href="" class="btn btn-primary"> Click Me </a>
+    <ul>
+   <li>
+       Friday 05:00
+   </li>
+   <li>
+       Clear
+   </li>
+   </ul>
+<div class=”row”>
+    <div class=”col-6”> 
+        <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
+        alt="clear"/>
+    12 ° | ° F
     </div>
-    <script src="src/app.js" ></script>/>
+        <div class=”col-6”>
+            <ul>
+                <li> Precipitation: 0% </li>
+                <li> Humidity: 70% </li>
+                <li> Wind: 2km/h </li>
+                </ul>
+                </div>
+        </div>
+        <small>
+            <a href="https://jovial-einstein-87e23e.netlify.app" target="_blank">
+                Open-Source Code</a>
+           by Elle Fairfowl 
+        </small>
+    </div>
+    <script src="src/app.js" ></script>
 </body>
 </html>
