--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
-    <link rel="stylesheet" href="src/app.css" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+        <link rel="stylesheet" href="src/app.css" />
     <title>Vanilla Weather App</title>
 </head>
 
 <body>
     <div class="container">
+        <div class="weather-app">
     <h1>
         New York
     </h1>
@@ -37,11 +38,13 @@
                 </ul>
                 </div>
         </div>
+        </div>
         <small>
             <a href="https://jovial-einstein-87e23e.netlify.app" target="_blank">
                 Open-Source Code</a>
-           by Elle Fairfowl 
+            by Elle Fairfowl
         </small>
+    </div>
     </div>
     <script src="src/app.js" ></script>
 </body>
