Styled Temperature Section

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
 <body>
     <div class="container">
         <div class="weather-app">
+            <div class="weather-app-wrapper">
+                <div class="overview">
     <h1>
         New York
     </h1>
@@ -24,12 +26,18 @@
        Clear
    </li>
    </ul>
+</div>
 <div class=”row”>
     <div class=”col-6”> 
+        <div class="clearfix weather-temperature">
         <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-        alt="clear"/>
-    12 ° | ° F
+        alt="clear" class="float-left"/>
+        <div class="float-left">
+            <strong>  12 °  </strong> 
+            <span class="units"> | <a href="#"> ° F </a> </span>
     </div>
+    </div>
+</div>
         <div class=”col-6”>
             <ul>
                 <li> Precipitation: 0% </li>
@@ -39,12 +47,14 @@
                 </div>
         </div>
         </div>
+    </div>
         <small>
             <a href="https://jovial-einstein-87e23e.netlify.app" target="_blank">
                 Open-Source Code</a>
             by Elle Fairfowl
         </small>
-    </div>
+</div>
+</div>
     </div>
     <script src="src/app.js" ></script>
 </body>
