--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
         <link rel="stylesheet" href="src/app.css" />
     <title>Vanilla Weather App</title>
 </head>
@@ -15,16 +16,12 @@
         <div class="weather-app">
             <div class="weather-app-wrapper">
                 <div class="overview">
-    <h1>
-        New York
-    </h1>
+    <h1 id="city">    </h1>
     <ul>
    <li>
        Friday 05:00
    </li>
-   <li>
-       Clear
-   </li>
+   <li id="description">   </li>
    </ul>
 </div>
 <div class=”row”>
@@ -33,7 +30,7 @@
         <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
         alt="clear" class="float-left"/>
         <div class="float-left">
-            <strong>  12 °  </strong> 
+            <strong id="temperature"> °  </strong> 
             <span class="units"> | <a href="#"> ° F </a> </span>
     </div>
     </div>
@@ -41,8 +38,8 @@
         <div class=”col-6”>
             <ul>
                 <li> Precipitation: 0% </li>
-                <li> Humidity: 70% </li>
-                <li> Wind: 2km/h </li>
+                <li> Humidity: <span id="humidity"></span> % </li>
+                <li> Wind: <span id="wind"></span> km/h </li>
                 </ul>
                 </div>
         </div>
