Updated Weather Icon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class=”col-6”> 
         <div class="clearfix weather-temperature">
         <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
-        alt="clear" class="float-left"/>
+        alt="clear"  id="icon" class="float-left"/>
         <div class="float-left">
             <strong id="temperature"> °  </strong> 
             <span class="units"> | <a href="#"> ° F </a> </span>
