--- a/index.html
+++ b/index.html
@@ -15,6 +15,16 @@
     <div class="container">
         <div class="weather-app">
             <div class="weather-app-wrapper">
+                <form id="search-form" class="mb-3">
+                    <div class="row">
+                        <div class="col-9">
+                    <input type="search" placeholder="Search City" id="city-input" class="form-control" autocomplete="off"/>
+                </div>
+                <div class="col-3">
+                    <input type="submit" value="Search" class="btn btn-primary"/>
+                    </div>
+                    </div>
+                    </form>
                 <div class="overview">
     <h1 id="city">    </h1>
     <ul>
