--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
         <img src="https://ssl.gstatic.com/onebox/weather/64/sunny.png"
         alt="clear"  id="icon" class="float-left"/>
         <div class="float-left">
-            <strong id="temperature"> °  </strong> 
-            <span class="units"> | <a href="#"> ° F </a> </span>
+            <strong id="temperature">  </strong> 
+            <span class="units">
+             <a href="#" id="celsius-link" class="active">° C </a>
+            | <a href="#" id="farenheit-link" class="active"> ° F </a> </span>
     </div>
     </div>
 </div>
