--- a/index.html
+++ b/index.html
@@ -27,8 +27,10 @@
                     </form>
                 <div class="overview">
     <h1 id="city">    </h1>
-    <ul>
-   <li> Last updated : <span id="date"> </span> </li>
+
+<div id="information">
+     <li>  <span id="date"> </span> </li>
+</div>
    <li id="description">   </li>
    </ul>
 </div>
@@ -57,38 +59,38 @@
 
     <div class="row weather-forecast" id="forecast">
         <div class="col-2">
-            <h3> Mon </h3>
+            <h3>  </h3>
             <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
             <div class="weather-forecast-temperature">
-                <strong> 22 ° </strong> 17 °
+                <strong>  ° </strong>  °
             </div>
         </div>
     <div class="col-2">
-        <h3> Tue </h3>
+        <h3>  </h3>
         <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
         <div class="weather-forecast-temperature">
-            <strong> 22 ° </strong> 17 °
+            <strong>  ° </strong>  °
         </div>
     </div>
     <div class="col-2">
-        <h3> Wed </h3>
+        <h3>  </h3>
         <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
         <div class="weather-forecast-temperature">
-            <strong> 22 ° </strong> 17 °
+            <strong>  ° </strong>  °
         </div>
     </div>
     <div class="col-2">
-        <h3> Thur </h3>
+        <h3>  </h3>
         <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
         <div class="weather-forecast-temperature">
-            <strong> 22 ° </strong> 17 °
+            <strong>  ° </strong>  °
         </div>
     </div>
     <div class="col-2">
-        <h3> Fri </h3>
+        <h3>  </h3>
         <img src="https://ssl.gstatic.com/onebox/weather/48/rain_s_cloudy.png" alt="" />
         <div class="weather-forecast-temperature">
-            <strong> 22 ° </strong> 17 °
+            <strong>  ° </strong>  °
         </div>
     </div>
 </div>
